--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -9,7 +9,15 @@
     "\n",
     "- Your analysis here\n",
     "  \n",
-    "---"
+    "Summarizes the analysis:\n",
+    "\n",
+    "This data set takes information from different schools and compares their students grading on Math and Reading test, as well as their school type, size and budget by creating different set of data frames to compare the different metrics from their alumni.\n",
+    "\n",
+    "Draws two correct conclusions or comparisons from the calculations:\n",
+    "\n",
+    "1. It is evident that charter school alumnis have a significantly higher passing rate and perform better in every score metric compare to District schools, at the same time the amount of spending by student was lower for charter schools.\n",
+    "\n",
+    "2. Larger size schools had a lower overall passing rate by a significant marging, showing that having less students per teachers and a more personal learning experience have a significant impact in the students success."
    ]
   },
   {
