--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -17,7 +17,9 @@
     "\n",
     "1. It is evident that charter school alumnis have a significantly higher passing rate and perform better in every score metric compare to District schools, at the same time the amount of spending by student was lower for charter schools.\n",
     "\n",
-    "2. Larger size schools had a lower overall passing rate by a significant marging, showing that having less students per teachers and a more personal learning experience have a significant impact in the students success."
+    "2. Larger size schools had a lower overall passing rate by a significant marging, showing that having less students per teachers and a more personal learning experience have a significant impact in the students success.\n",
+    "\n",
+    "3. There is a higher passing rate in the district on reading than math, showing the need to reinforce certain concepts in math, as well as taking a different approach to teaching or the sylabus."
    ]
   },
   {
